--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,15 @@ dependencies {
     implementation 'com.google.dagger:dagger:2.30'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.30'
 
+    // Navigation
+    def nav_version = "2.3.2"
+    implementation "androidx.navigation:navigation-fragment:$nav_version"
+    implementation "androidx.navigation:navigation-ui:$nav_version"
+
+    //fragments
+    def fragment_version = "1.2.5"
+    implementation "androidx.fragment:fragment:$fragment_version"
+
 
 
 }
