--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,19 +3,22 @@
     package="com.example.parkinson">
 
     <application
-        android:allowBackup="true"
+        android:name="com.example.ParkinsonApplication"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.ParkinsonProject">
-        <activity android:name=".features.on_boarding.OnBoardingActivity"></activity>
-        <activity android:name=".features.main.MainActivity">
+        android:theme="@style/AppTheme.NoActionBar">
+        <activity android:name=".features.on_boarding.OnBoardingActivity"
+            android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".features.main.MainActivity">
         </activity>
     </application>
 
