--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,5 @@
-plugins {
-    id 'com.android.application'
-}
+apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 30
@@ -52,7 +51,5 @@ dependencies {
     //fragments
     def fragment_version = "1.2.5"
     implementation "androidx.fragment:fragment:$fragment_version"
-
-
 
 }
