--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,16 +10,25 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
-        <activity android:name=".features.on_boarding.OnBoardingActivity"
-            android:windowSoftInputMode="adjustPan">
+
+        <activity android:name=".features.splash.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".features.on_boarding.OnBoardingActivity"
+            android:windowSoftInputMode="adjustPan">
+        </activity>
+
         <activity android:name=".features.main.MainActivity">
         </activity>
+
+
     </application>
+
+
 
 </manifest>
