--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,8 +33,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'at.stefangeyer.challonge.rest:retrofit:2.1.0'
-    implementation 'com.google.firebase:firebase-auth:19.3.1'
-    implementation 'com.google.firebase:firebase-database:19.3.0'
+    implementation 'com.google.firebase:firebase-auth:20.0.1'
+    implementation 'com.google.firebase:firebase-database:19.6.0'
     testImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
@@ -51,5 +51,11 @@ dependencies {
     //fragments
     def fragment_version = "1.2.5"
     implementation "androidx.fragment:fragment:$fragment_version"
+
+    //MultiViewAdapter
+    implementation 'dev.ahamed.mva2:adapter:2.0.0'
+    implementation 'dev.ahamed.mva2:ext-databinding:2.0.0'  // DataBinding
+    implementation 'dev.ahamed.mva2:ext-decorator:2.0.0'    // Decorators
+    implementation 'dev.ahamed.mva2:ext-diffutil-rx:2.0.0'  // RxDiffUtil
 
 }
