--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
+apply plugin: 'androidx.navigation.safeargs'
 
 android {
     compileSdkVersion 30
@@ -57,5 +58,8 @@ dependencies {
     implementation 'dev.ahamed.mva2:ext-databinding:2.0.0'  // DataBinding
     implementation 'dev.ahamed.mva2:ext-decorator:2.0.0'    // Decorators
     implementation 'dev.ahamed.mva2:ext-diffutil-rx:2.0.0'  // RxDiffUtil
+
+    def lottieVersion = "3.6.0"
+    implementation "com.airbnb.android:lottie:$lottieVersion"
 
 }
