--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,10 @@
             android:windowSoftInputMode="adjustResize">
         </activity>
 
+        <activity android:name=".features.notification.NotificationActivity"
+            android:theme="@style/Theme.Transparent">
+        </activity>
+
 
         <meta-data
             android:name="preloaded_fonts"
