--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,8 +33,7 @@
         </activity>
 
         <activity android:name=".features.notification.NotificationActivity"
-            android:theme="@style/Theme.Transparent"
-            >
+            android:theme="@style/Theme.Transparent">
         </activity>
 
 
