--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,4 +63,6 @@ dependencies {
     def lottieVersion = "3.6.0"
     implementation "com.airbnb.android:lottie:$lottieVersion"
 
+    implementation 'com.github.zcweng:switch-button:0.0.3@aar'
+
 }
